--- a/typlore/package.json
+++ b/typlore/package.json
@@ -9,6 +9,7 @@
     "drei": "^0.0.60",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-force-graph": "^1.41.14",
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27",
     "react-three-fiber": "^4.2.10",
